@@ -15,7 +15,6 @@ sub add_methods {
 	$planner->add_delegate('dist_sharedir', sub {
 		my ($planner, $dir, $dist_name) = @_;
 		$dist_name //= $planner->distribution;
-		$dir = unix_to_native_path($dir);
 
 		my $inner = $planner->new_scope;
 		$inner->load_extension("Dist::Build::Core");
@@ -35,7 +34,6 @@ sub add_methods {
 		my ($planner, $dir, $module_name) = @_;
 		$module_name //= $planner->main_module;
 		(my $module_dir = $module_name) =~ s/::/-/g;
-		$dir = unix_to_native_path($dir);
 
 		my $inner = $planner->new_scope;
 		$inner->load_extension("Dist::Build::Core");
